Feat: 약관 관련 API 개발(4) - 리팩토링 - 불필요한 메서드 인자 제거 - Collect->toList ==> toList()로 통일 - isMainAddress 컬럼값이 들어오지 않아도 에러 발생하지 않도록 삼항연산자로 로직 수정 #79